--- a/Backend/docker-compose.test_api.yml
+++ b/Backend/docker-compose.test_api.yml
@@ -29,7 +29,7 @@ services:
       ALGORITHM: ${ALGORITHM}
       WEATHER_API_KEY: ${WEATHER_API_KEY}
       DB_ENV: ${DB_ENV}
-      FILE_ID: ${FILE_ID}
+      HISTORIC_FILE_ID: ${HISTORIC_FILE_ID}
       ACCESS_TOKEN_EXPIRE_MINUTES: ${ACCESS_TOKEN_EXPIRE_MINUTES}      
       MODEL_INFERENCE: ${MODEL_INFERENCE}
       FCST_HISTORY: ${FCST_HISTORY}
