--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -28,11 +28,10 @@ services:
       context: ${BACKEND_PROJ_DIR}/api
     container_name: api
     environment:
-      # SECRET_KEY: ${SECRET_KEY}
       ALGORITHM: ${ALGORITHM}
       WEATHER_API_KEY: ${WEATHER_API_KEY}
       DB_ENV: ${DB_ENV}
-      FILE_ID: ${FILE_ID}
+      HISTORIC_FILE_ID: ${HISTORIC_FILE_ID}
       ACCESS_TOKEN_EXPIRE_MINUTES: ${ACCESS_TOKEN_EXPIRE_MINUTES}            
       MODEL_INFERENCE: ${MODEL_INFERENCE}
       FCST_HISTORY: ${FCST_HISTORY}
